# bundle-test

./: BundleUtilities.cmake  CMakeLists.txt
libA/: CMakeLists.txt  libA.h  libAExport.h
libB/: CMakeLists.txt  libA.cpp  libA.h  libB.cpp  libB.h  libBExport.h
libC/: CMakeLists.txt  libC.cpp  libC.h  libCExport.h
main/: CMakeLists.txt  main.cpp
